<resources>
    <string name="app_name">Univa_calificaciones</string>
    <string name="bienvenidos">BIENVENIDOS</string>
    <string name="portal">PORTAL CALIFICACIONES UNIVA</string>
    <string name="siguiente">Siguiente</string>
    <string name="alumnos">ALUMNOS</string>
    <string name="matricula">Matrícula</string>
    <string name="password">Contraseña</string>
    <string name="entrar">Entrar</string>
    <string name="docente">DOCENTE</string>
    <string name="clave">Clave</string>
    <string name="materias">Materias por cuatrimestre</string>
    <string name="carrera">Carrera a mostar</string>
    <string name="periodo">Periodo a mostrar</string>
    <string name="historial">Historial académico</string>
    <string name="consutla">Consulta el historial académico de los programas que has cursado</string>
    <string name="registro">Registro de calificaciones</string>
    <string name="materia">Materia</string>
    <string name="grupo">Grupo:</string>
    <string name="periodos">Periodo:</string>
    <string name="editar">Editar</string>
    <string name="nuevo">Nuevo</string>
    <string name="alumno">Alumno</string>
    <string name="calificacion">Calificacion</string>
    <string name="guardar">Guardar</string>


    <string name="title_activity_nav_alumno">NavAlumno</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>

    <string name="menu_calificacion">Calificaciones cuatrimestrales</string>
    <string name="menu_historial">Historial académico</string>
    <string name="menu_salir">Cerrar sesión</string>
    <string name="menu_registro">Registro calificaciones</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="campus">
        <item>Seleccione el campus</item>
        <item>Aguascalientes</item>
        <item>Colima</item>
        <item>Guadalajara</item>
        <item>Lagos de Moreno</item>
        <item>La Piedad</item>
        <item>León</item>
        <item>Puerto Vallarta</item>
        <item>Querétaro</item>
        <item>Tepic</item>
        <item>Uruapan</item>
        <item>Zamora</item>
    </string-array>
</resources>
