<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_container"
    android:orientation="vertical">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/titles"
        android:textSize="30dp" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_marginTop="13dp"
        android:layout_marginBottom="3dp"
        android:background="@drawable/dialog_divider" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        android:text="@string/alumno"
        android:textSize="25dp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spn_alumno"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/spinner"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        android:text="@string/calificacion"
        android:textSize="25dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edt_calif"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:background="@drawable/edt"
        android:textCursorDrawable="@null"
        android:inputType="number"
        android:textStyle="normal"
        android:textSize="20dp" />

    <Button
        android:id="@+id/btn_guardar"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/guardar"
        android:layout_gravity="right"
        android:layout_marginTop="100dp"
        android:textColor="@color/white"
        android:backgroundTint="@color/blue"/>

</LinearLayout>