<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Vistas.Fragments.Historial.HistorialFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:gravity="right"
            app:srcCompat="@drawable/icono_univa"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:layout_marginTop="-30dp"
            android:layout_marginRight="27dp"
            android:text="@string/historial"
            android:textColor="@color/titles"
            android:textSize="28dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="15dp"
            android:text="@string/consutla"
            android:textColor="@color/titles"
            android:textSize="18dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/carrera"
            android:textSize="20dp"
            android:textStyle="bold"
            android:paddingTop="25dp"/>

        <Spinner
            android:id="@+id/spn_carrera"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginTop="-30dp"
            android:layout_marginStart="75dp"
            android:layout_marginLeft="75dp"/>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>