<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                app:srcCompat="@drawable/logo_univa" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="50dp"
                android:text="@string/docente"
                android:textColor="@color/titles"
                android:textSize="24dp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="80dp"
                android:gravity="center"
                app:srcCompat="@drawable/docente" />

            <EditText
                android:id="@+id/edt_clave"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/edittext"
                android:drawableLeft="@drawable/profesor"
                android:hint="@string/clave"
                android:layout_marginTop="30dp"
                android:textColor="@color/titles"
                android:textCursorDrawable="@null"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/edittext"
                android:drawableLeft="@drawable/lock"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:layout_marginTop="40dp"
                android:textColor="@color/titles"
                android:textCursorDrawable="@null"
                android:textSize="20dp" />

            <Button
                android:id="@+id/btn_entrar"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/entrar"
                android:layout_gravity="center"
                android:layout_marginTop="140dp"
                android:textColor="@color/white"
                android:backgroundTint="@color/blue"/>

            <ProgressBar
                android:id="@+id/progress_circular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="false"
                android:max="48"
                android:visibility="invisible"
                android:layout_centerHorizontal="true" />

        </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

