<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            app:srcCompat="@drawable/logo_univa" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="50dp"
            android:text="@string/bienvenidos"
            android:textColor="@color/titles"
            android:textSize="24dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="10dp"
            android:text="@string/portal"
            android:textColor="@color/titles"
            android:textSize="24dp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spn_campus"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_marginTop="70dp"
            android:background="@drawable/spinner"
            android:entries="@array/campus"/>

        <RadioGroup
            android:id="@+id/rgp_Grupo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="55dp">

            <RadioButton
                android:id="@+id/rbt_Alumno"
                android:layout_width="128dp"
                android:layout_height="wrap_content"
                android:checked="false"
                android:layout_marginRight="70dp"
                android:text="Alumno" />

            <RadioButton
                android:text="Docente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:id="@+id/rbt_Docente" android:layout_weight="1"/>
        </RadioGroup>

        <Button
            android:id="@+id/btn_siguiente"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/siguiente"
            android:layout_gravity="right"
            android:layout_marginTop="60dp"
            android:textColor="@color/white"
            android:backgroundTint="@color/blue"/>

    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>